--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.app-container {
+  display:flex;
+  flex-direction:column;
+  min-width:100vw;
+  min-height:100vh;
+}
+
